Prevent jump of body on Chrome and update configuration sorting

--- a/modal.scss
+++ b/modal.scss
@@ -9,16 +9,25 @@
 /*
  * Configuration
  */
-$modal-border-color: #ddd;
 $modal-max-width: 650px;
-$modal-mobile-header: #27aae2;
+
+// Set high z-index to appear above all other content
+$modal-layer: 999;
+
+// Color configuration
+$modal-border-color: #ddd;
 $modal-inner-background: #fff;
-$modal-layer: 999; // Set high z-index to appear above all other content
+$modal-color: #222;
+$modal-mobile-header: #27aae2;
 
 
 // Prevent overflow on HTML element
 html {
 	overflow-y: scroll;
+
+	> body {
+		overflow-y: scroll;
+	}
 }
 
 .has-overlay {
@@ -26,7 +35,6 @@ html {
 
 	> body {
 		height: 100%;
-		overflow-y: scroll;
 	}
 
 	@media screen and (max-width: 30em) {
@@ -59,18 +67,17 @@ html {
 
 	opacity: 0;
 
-	color: #222;
+	color: $modal-color;
 	line-height: 1.3;
 
 	// Show modal when requested
 	&:target,
 	&.is-active {
-
-	-webkit-transform: translate(0, 0);
-	   -moz-transform: translate(0, 0);
-	     -o-transform: translate(0, 0);
-	    -ms-transform: translate(0, 0);
-	        transform: translate(0, 0);
+		-webkit-transform: translate(0, 0);
+		   -moz-transform: translate(0, 0);
+		     -o-transform: translate(0, 0);
+		    -ms-transform: translate(0, 0);
+		        transform: translate(0, 0);
 
 		opacity: 1;
 	}
